# BKAI-IGH-NeoPolyp-

./: .gitignore  README.md  ReadMe.md  app.py  deephomework.ipynb  infer.py  pyproject.toml  requirements.txt
notebooks/: kaggle.ipynb  test.ipynb
script/: setup.sh  train.sh  train_resunet.sh  train_unet.sh
src/: train.py
src/data/: dataset.py  transform.py
src/model/: loss.py  model.py
src/neopolyp/dataset/: dataset.py  transform.py
src/neopolyp/infer/: __main__.py
src/neopolyp/model/: loss.py  model.py  resunet.py  unet.py
src/neopolyp/train/: __main__.py
