[project]
name = "neopolyp"
authors = [{name = "dodinhhoang", email = "dodinhhoanghm@gmail.com"}]
version = "1.0.0"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "opencv-python",
    "lightning",
    "torchsummary",
    "albumentations"
]

[project.optional-dependencies]
dev = [
    "pytest"
]
